--- a/pushps_logger/templates/index.html
+++ b/pushps_logger/templates/index.html
@@ -1,3 +1,16 @@
+{% extends "base.html"%}{%block head%}{{super()}}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='extended_beauty.css') }}" />
+{% endblock%}{%block content%}
 <h1>
-    index
+    Hello!
 </h1>
+<center>
+    <img src="{{url_for('static',filename='images/pushup.png')}}" alt="pushup"
+    height="200px"
+    />
+</center>
+<p>
+    Welcome to your <br>This is website basic crud
+</p>
+{%endblock%}
