--- a/pushps_logger/templates/profile.html
+++ b/pushps_logger/templates/profile.html
@@ -1,3 +1,4 @@
-<h1>
-    profile
-</h1>
+{% extends "base.html"%}{%block head%}{{super()}}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='extended_beauty.css') }}" />
+{% endblock%}
