--- a/pushps_logger/templates/profile.html
+++ b/pushps_logger/templates/profile.html
@@ -2,3 +2,6 @@
 
 <link rel="stylesheet" href="{{ url_for('static', filename='extended_beauty.css') }}" />
 {% endblock%}
+{%block content%}
+<h1>Welcome, {{ name }}!</h1>
+{%endblock%}
