--- a/pushps_logger/templates/base.html
+++ b/pushps_logger/templates/base.html
@@ -66,7 +66,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a
-              href="{{ url_for('main.index') }}"
+            href="{{ url_for('main.user_workouts') }}"
               class="btn btn-outline-secondary"
               role="button"
               >All Workouts</a
@@ -85,7 +85,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           {% if current_user.is_authenticated %}
-          <a href="#" class="btn btn-outline-primary" role="button"
+          <a href="{{ url_for('main.new_workout') }}" class="btn btn-outline-primary" role="button"
             >Add New Workout</a
           >
           {% endif %} {% if not current_user.is_authenticated %}
