--- a/pushps_logger/templates/all_workouts.html
+++ b/pushps_logger/templates/all_workouts.html
@@ -7,6 +7,11 @@
 <h1>
   Welcome, {{ user.name }}!
 </h1>
+{% with messages = get_flashed_messages() %} {% if messages %}
+<div class="flashes">
+  {{ messages[0] }}
+</div>
+{% endif %} {% endwith %}
 <div>
   <table class="table table-hover" style="width: 700px;">
     <thead class="thead-dark">
