--- a/pushps_logger/templates/all_workouts.html
+++ b/pushps_logger/templates/all_workouts.html
@@ -22,7 +22,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for workout in workouts %}
+      {% for workout in workouts.items %}
       <tr>
         <td>{{ workout.pushups }}</td>
         <td>{{ workout.date_posted.strftime('%m/%d/%Y') }}</td>
@@ -49,5 +49,20 @@
       {% endfor %}
     </tbody>
   </table>
+  {% for page_num in workouts.iter_pages(left_edge=1, right_edge=1,
+    left_current=1, right_current=1) %} {% if page_num %} {% if workouts.page ==
+    page_num %}
+  <a
+      class="btn btn-info mb-4"
+      href="{{ url_for('main.user_workouts', page=page_num) }}"
+      >{{ page_num }}</a
+    >
+    {% else %}
+    <a
+      class="btn btn-outline-info mb-4"
+      href="{{ url_for('main.user_workouts', page=page_num) }}"
+      >{{ page_num }}</a
+    >
+    {% endif %} {% else %} ... {% endif %} {% endfor %}
 </div>
 {% endblock %}
